# acc

./: CMakeLists.txt
mapgraph/: Makefile
mapgraph/Algorithms/: setup.mk
mapgraph/Algorithms/BFS/: Makefile  bfs.cu  bfs.h
mapgraph/Algorithms/CC/: cc.h
mapgraph/Algorithms/PageRank/: PageRank.h
mapgraph/Algorithms/SSSP/: sssp.cu  sssp.h
mapgraph/GASengine/: csr_problem.cuh  enactor_vertex_centric.cuh
mapgraph/GASengine/vertex_centric/mgpukernel/: kernel.cuh
mapgraph/doc/: mapgraph-overview.h
tema 1/: tema 1.sln
tema 1/Debug/: out.txt
tema 1/Release/: out.txt  tema 1.iobj  tema 1.ipdb
tema 1/tema 1/: stdafx.cpp  tema 1.vcxproj  tema 1.vcxproj.filters
tema 1/tema 1/Debug/: tema 1.pch  vc141.idb
tema 1/tema 1/Debug/tema 1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tema 1.lastbuildstate
tema 1/tema 1/Release/: tema 1.pch
tema 1/tema 1/Release/tema 1.tlog/: CL.command.1.tlog  (+7 more)
tema 1/x64/sss/: tema 1.ilk
tema 2/: tema 2.sln
tema 2/Debug/: tema 2.ilk
tema 2/tema 2/: MapGrapg.h  MapGraph.cpp  MapGraph.h  tema 2.cpp  tema 2.vcxproj  tema 2.vcxproj.filters
tema 2/tema 2/Debug/: tema 2.pch  vc141.idb
tema1/: CMakeLists.txt  out.txt
tema1/include/: SortAlgs.h
tema1/source/: SortAlgs.cpp  tema 1.cpp
tema1/test/: grapf.xlsx  out.txt  out01072019.txt  out02072019.txt  tema 1.ilk
tema2/: CMakeLists.txt  orase si distante.xlsx
tema2/include/: MapGraph.h
tema2/source/: MapGraph.cpp  stdafx.cpp  tema2.cpp
tema3/: CMakeLists.txt
tema3/source/: tema3.cpp
(+16 files in other folders)
